--- a/views/register-notcovered.pug
+++ b/views/register-notcovered.pug
@@ -11,25 +11,25 @@ block content
                     div(class="row justify-content-center ")
                         div(class="col-12 col-md-6 col-lg-5")
                             div(class="form-group")
-                                label(for="full-name" class="form-control-label") Full Name - <span style="font-weight:300;">Subdistrict
+                                label(for="full-name" class="form-control-label") Full Name
                                 input#full-name(type="text" name="fullname" class="form-control" required)
                                 
                     div(class="row justify-content-center ")
                         div(class="col-12 col-md-6 col-lg-5")
                             div(class="form-group")
-                                label(for="mobile-number" class="form-control-label") Mobile Number - <span style="font-weight:300;">Subdistrict
+                                label(for="mobile-number" class="form-control-label") Mobile Number
                                 input#mobile-number(type="text" name="mobilenumber" class="form-control" required)
                                 
                     div(class="row justify-content-center ")
                         div(class="col-12 col-md-6 col-lg-5")
                             div(class="form-group")
-                                label(for="email-addr" class="form-control-label") E-mail Address - <span style="font-weight:300;">Subdistrict
+                                label(for="email-addr" class="form-control-label") E-mail Address
                                 input#email-addr(type="text" name="emailaddr" class="form-control" required)
                     
                     div(class="row justify-content-center ")
                         div(class="col-12 col-md-6 col-lg-5")
                             div(class="form-group")
-                                label(for="city" class="form-control-label") Kota - <span style="font-weight:300;">Subdistrict
+                                label(for="city" class="form-control-label") Kota - <span style="font-weight:300;">City
                                 input#city(type="text" name="city" class="form-control" required)
                                 
                     div(class="row justify-content-center ")
