--- a/views/support.pug
+++ b/views/support.pug
@@ -37,7 +37,7 @@ block content
                     
                     div(class="row justify-content-center")
                         div(class="col-12 col-md-12" style="margin-bottom:1rem;")
-                            select(class="nusanet-form" id="selectFor" name="selectFor")
+                            select(class="form-control" id="selectFor" name="selectFor")
                                 option(disabled selected value="") Reason for getting in touch
                                 option Sales
                                 option Billing
