update no tlp contactus

--- a/views/contact.pug
+++ b/views/contact.pug
@@ -4,11 +4,11 @@ block content
   div(style="background-color:#fff;margin-top:-100px;height:100px")
   
   .register-page
-    .register-form-wrapper
+    .container
       .row
         .col-12.col-lg-6
-          h4(style="text-align:center;") Contact Us
-          h6(style="text-align:center;") We’re here to help when you need us. Our 24/7 live chat support is ready to answer your questions. You can also send us an email, and we’ll answer within 24 hours.
+          h4 Contact Us
+          h6 We’re here to help when you need us. Our 24/7 live chat support is ready to answer your questions. You can also send us an email, and we’ll answer within 24 hours.
           h4 24/7 Helpdesk Support
           p Phone : 021 – 5276616<br/>SMS : 0819 8 54321<br/>WhatsApp : 0812 8691 1930<br/>Email : <a style="color:#444;" href="mailto:helpdesk@jkt.nusa.net.id">helpdesk@jkt.nusa.net.id</a>
           
