--- a/public/stylesheets/style-v01.css
+++ b/public/stylesheets/style-v01.css
@@ -1268,3 +1268,18 @@ input::-webkit-inner-spin-button {
 .tab{
   display:none;
 }
+
+::placeholder {
+    color: #000;
+    opacity: 0.4; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: #000;
+    opacity: 0.4; /* Firefox */
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+    color: #000;
+    opacity: 0.4; /* Firefox */
+}
