--- a/public/stylesheets/style-v01.css
+++ b/public/stylesheets/style-v01.css
@@ -1269,17 +1269,17 @@ input::-webkit-inner-spin-button {
   display:none;
 }
 
-::placeholder {
+form-control::placeholder {
     color: #000;
     opacity: 0.4; /* Firefox */
 }
 
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
+form-control::-ms-input-placeholder { /* Internet Explorer 10-11 */
     color: #000;
     opacity: 0.4; /* Firefox */
 }
 
-::-ms-input-placeholder { /* Microsoft Edge */
+form-control::-ms-input-placeholder { /* Microsoft Edge */
     color: #000;
     opacity: 0.4; /* Firefox */
 }
