--- a/public/stylesheets/style-v01.css
+++ b/public/stylesheets/style-v01.css
@@ -1283,3 +1283,18 @@ form-control::-ms-input-placeholder { /* Microsoft Edge */
     color: #000;
     opacity: 0.4; /* Firefox */
 }
+
+
+/* Placeholder styling */
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: red;
+    opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: red;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+    color: red;
+}
